Fixed text overflow issue in super admin cards

--- a/src/css/SuperAdminPage.css
+++ b/src/css/SuperAdminPage.css
@@ -107,9 +107,10 @@
   margin-top: 0px;
   border: 1px solid black;
   border-radius: 3px;
-  white-space: nowrap;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
   overflow: hidden;
-  text-overflow: ellipsis;
 }
 .super-admin-desc {
   margin-bottom: 15px;
